src/index.css
@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
@import "tailwindcss";
@plugin "daisyui";

.font-urbanist {
  font-family: "Urbanist", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

@plugin "daisyui/theme" {
  name: "light";
  default: true;
  --color-primary: #caeb66;
  --color-secondary: #03373d;
  --color-accent: #606060;
  --color-neutral: #1f1f1f;
}

